2006-10-31  Razya Ladklesky  <razya@il.ibm.com>

* tree-inline.c (remap_decls): remap all TYPE_DECLs.
            PR tree-optimization/29122
            * tree-inline.c (tree_function_versioning): Update DECL_ASSEMBLER_NAME
              for the new version.  Assign NULL to DECL_RTL of the new version.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ipa-branch@118227 138bc75d-0d04-0410-961f-82ee72b054a4